Thu Jul 10 15:28:50 UTC 2008  Chad Elliott  <elliott_c@ociweb.com>

        * devtools/document_template.pl:

          Fixed a bug where template variables used within template
          functions were ignored.

        * docs/README:
        * modules/ProjectCreator.pm:

          Added the ability to utilize project settings within the
          Define_Custom command, commandflags, dependent, output_option,
          and postcommand settings.

Thu Jul 10 14:29:44 UTC 2008  Chad Elliott  <elliott_c@ociweb.com>

        * modules/MakeProjectCreator.pm:
        * templates/make.net.mpd:
        * templates/make.net.mpt:
        * docs/templates/make.net.txt:

          Added support for compiling C# code using Mono.

        * modules/Creator.pm:
        * modules/ProjectCreator.pm:
        * modules/StringProcessor.pm:
        * modules/TemplateParser.pm:
        * modules/VC9ProjectCreator.pm:
        * modules/VC9WorkspaceCreator.pm:

          Decreased op code count.

Wed Jul  9 13:46:02 UTC 2008  Chad Elliott  <elliott_c@ociweb.com>

        * modules/AutomakeProjectCreator.pm:
        * modules/MakeProjectBase.pm:
        * modules/Parser.pm:

          Reduce op code count.

        * modules/CommandHelper.pm:

          Added a debug message to assist users in figuring out why their
          helper isn't being picked up.

        * modules/Creator.pm:

          Modified recursive_directory_list() to skip .svn and CVS
          directories.

        * modules/ProjectCreator.pm:

          Fixed a very old and incorrect assumption that output file names
          generated as part of a custom definition had to be longer than the
          length of the input file name.

Tue Jul  8 15:35:29 UTC 2008  Steve Huston  <shuston@riverace.com>

        * templates/vc8.mpd: Allow a project to be a "make output" type using
          the VCNMakeTool section instead of the usual compile, link, etc.